9/12/22: 12:09 - Increased size of image descriptions and fixed alignment of images on junior dances page

--- a/style.css
+++ b/style.css
@@ -104,12 +104,18 @@ table {
   margin: auto;
 }
 
+#divpic {
+ text-align: center; 
+}
+
 .left {
-  margin-left: 300px;
+  margin-right: 600px;
+  font: 30px "Fraunces";
 }
 
 .right {
   margin-left: 600px;
+  font: 30px "Fraunces";
 }
 
 dl {
